--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">Memes App</string>
     <string name="meme_image">Meme Image</string>
     <string name="share">Share</string>
     <string name="next">Next</string>
